--- a/package.json
+++ b/package.json
@@ -13,11 +13,20 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@rqft/rust": "^1.0.18",
     "fp-ts": "^2.13.1",
+    "node": "^19.6.0",
+    "pnpm": "^7.27.1",
     "rxjs": "^7.8.0"
   },
   "type": "module",
   "devDependencies": {
+    "@types/eslint": "^8.4.7",
+    "@types/node": "^14.18.13",
+    "@typescript-eslint/eslint-plugin": "^5.26.0",
+    "@typescript-eslint/parser": "^5.26.0",
+    "eslint": "^8.34.0",
+    "prettier": "^2.5.1",
     "tsup": "^6.6.3",
     "vitest": "^0.28.5"
   }
