--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "noImplicitAny": true,
     "experimentalDecorators": true,
     "strictNullChecks": true,
-    "importsNotUsedAsValues": "error",
+    // "importsNotUsedAsValues": "error",
     "moduleResolution": "node",
     "skipLibCheck": true,
     "declaration": true,
@@ -16,5 +16,5 @@
     "forceConsistentCasingInFileNames": true
   },
   "exclude": ["node_modules", "dist"],
-  "include": ["src"]
+  "include": ["src", ".eslintrc.cjs"]
 }
