--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
+  "module": "dist/index.mjs",
   "scripts": {
     "tdd": "vitest --config ./vitest.config.ts",
     "dev": "tsup --watch --onSuccess node .",
@@ -18,7 +19,6 @@
     "pnpm": "^7.27.1",
     "rxjs": "^7.8.0"
   },
-  "type": "module",
   "devDependencies": {
     "@types/eslint": "^8.4.7",
     "@types/node": "^14.18.13",
@@ -28,5 +28,6 @@
     "prettier": "^2.5.1",
     "tsup": "^6.6.3",
     "vitest": "^0.28.5"
-  }
+  },
+  "type": "module"
 }
