--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
-  "module": "dist/index.mjs",
+  "module": "dist/index.js",
   "scripts": {
     "tdd": "vitest --config ./vitest.config.ts",
-    "dev": "tsup --watch --onSuccess node .",
+    "dev": "tsup --watch",
     "build": "tsup",
     "test": "vitest run"
   },
@@ -17,11 +17,13 @@
     "@rqft/rust": "^1.0.18",
     "fp-ts": "^2.13.1",
     "pnpm": "^7.27.1",
-    "rxjs": "^7.8.0"
+    "rxjs": "^7.8.0",
+    "ws": "^8.12.1"
   },
   "devDependencies": {
     "@types/eslint": "^8.4.7",
     "@types/node": "^14.18.13",
+    "@types/ws": "^8.5.4",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "@typescript-eslint/parser": "^5.26.0",
     "eslint": "^8.34.0",
