--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "discord-api-types": "^0.37.39",
     "fp-ts": "^2.13.1",
     "pnpm": "^7.28.0",
     "rxjs": "^7.8.0",
