--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "eslint": "^8.35.0",
     "prettier": "^2.8.4",
     "tsup": "latest",
-    "typescript": "^5.0.2",
+    "typescript": "5.0.2",
     "vitest": "^0.28.5"
   },
   "type": "module"
