--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "license": "MIT",
   "dependencies": {
     "fp-ts": "^2.13.1",
-    "openapi-typescript-fetch": "^1.1.3",
+    "openapi-typescript-fetch": "file:./openapi-typescript-fetch",
     "rxjs": "^7.8.0",
     "ws": "^8.12.1"
   },
